# Dauns_IT_TOP

./: .gitignore
doki/: Тема и ссылка на доску
game/: .gitignore  BreakingBonds.sln  BreakingBonds.vcxproj  CMakeLists.txt  QUICKSTART.md  README.md  WinGameWindow.cpp  WinGameWindow.h  copy_dll.bat  main.cpp
game/src/: ChemistryEngine.cpp  ChemistryEngine.h  DialogSystem.cpp  DialogSystem.h  GameEngine.cpp  GameEngine.h  GameWindow.cpp  GameWindow.h  UI_MainWindow.cpp  UI_MainWindow.h  main.cpp
